<resources>
    <string name="app_name">أذكار الصباح والمساء</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_index">فهرس</string>
    <string name="title_bookmarks">مختارات</string>
    <string name="title_settings">إعدادات</string>

    <string name="bookmark">إشارة مرجعية</string>
    <string name="share">مشاركة</string>
    <string name="copy">نسخ</string>
    <string name="share_app">مشاركة التطبيق</string>

    <string name="jsonData">[{"ch_id":1,"ch_name":"باب فضل الذكر والدعاء","ch_evidence":"","duas":[{"id":1,"dua":"عَنْ أَبِي هُرَيْرَةَ، عَنِ النَّبِيِّ ﷺ قَالَ: «كَلِمَتَانِ خَفِيفَتَانِ عَلَى اللِّسَانِ، ثَقِيلَتَانِ فِي المِيزَانِ، حَبِيبَتَانِ إِلَى الرَّحْمَنِ: سُبْحَانَ الله العَظِيمِ، سُبْحَانَ الله وَبِحَمْدِهِ»","evidence":"رواه البخاري (6406) ومسلم (2694) ."},{"id":2,"dua":"عَنْ أَبِي هُرَيْرَةَ، قَالَ: قَالَ رَسُولُ الله ﷺ: «لَأَنْ أَقُولَ سُبْحَانَ الله، وَالْحَمْدُ لله، وَلَا إِلَهَ إِلَّا الله، وَالله أَكْبَرُ، أَحَبُّ إِلَيَّ مِمَّا طَلَعَتْ عَلَيْهِ الشَّمْسُ» ","evidence":"رواه مسلم (2695) ."},{"id":3,"dua":"عَنْ سَعْدٍ، قَالَ: كُنَّا عِنْدَ رَسُولِ الله ﷺ، فَقَالَ: «أَيَعْجِزُ أَحَدُكُمْ أَنْ يَكْسِبَ، كُلَّ يَوْمٍ أَلْفَ حَسَنَةٍ؟» فَسَأَلَهُ سَائِلٌ مِنْ جُلَسَائِهِ: كَيْفَ يَكْسِبُ أَحَدُنَا أَلْفَ حَسَنَةٍ؟ قَالَ: «يُسَبِّحُ مِائَةَ تَسْبِيحَةٍ، فَيُكْتَبُ لَهُ أَلْفُ حَسَنَةٍ، أَوْ يُحَطُّ عَنْهُ أَلْفُ خَطِيئَةٍ»","evidence":"رواه مسلم (2698)."},{"id":4,"dua":"عَنْ جَابِرٍ، عَنِ النَّبِيِّ ﷺ، قَالَ: «مَنْ قَالَ: سُبْحَانَ الله العَظِيمِ وَبِحَمْدِهِ، غُرِسَتْ لَهُ نَخْلَةٌ فِي الجَنَّةِ»","evidence":"رواه الترمذي (3464). وهو ثابت. قال الشيخ الألباني: صحيح."},{"id":5,"dua":"عَنْ أَبِي مُوسَى الأَشْعَرِيِّ ، قَالَ: لَمَّا غَزَا رَسُولُ الله ﷺ خَيْبَرَ، أَوْ قَالَ: لَمَّا تَوَجَّهَ رَسُولُ الله ﷺ، أَشْرَفَ النَّاسُ عَلَى وَادٍ، فَرَفَعُوا أَصْوَاتَهُمْ بِالتَّكْبِيرِ: الله أَكْبَرُ الله أَكْبَرُ، لاَ إِلَهَ إِلَّا الله، فَقَالَ رَسُولُ الله ﷺ: «ارْبَعُوا عَلَى أَنْفُسِكُمْ، إِنَّكُمْ لاَ تَدْعُونَ أَصَمَّ وَلاَ غَائِبًا، إِنَّكُمْ تَدْعُونَ سَمِيعًا قَرِيبًا وَهُوَ مَعَكُمْ»، وَأَنَا خَلْفَ دَابَّةِ رَسُولِ الله ﷺ، فَسَمِعَنِي وَأَنَا أَقُولُ: لاَ حَوْلَ وَلاَ قُوَّةَ إِلَّا بِالله، فَقَالَ لِي: «يَا عَبْدَ الله بْنَ قَيْسٍ». قُلْتُ: لَبَّيْكَ يَا رَسُولَ الله، قَالَ: «أَلاَ أَدُلُّكَ عَلَى كَلِمَةٍ مِنْ كَنْزٍ مِنْ كُنُوزِ الجَنَّةِ» قُلْتُ: بَلَى يَا رَسُولَ الله، فَدَاكَ أَبِي وَأُمِّي، قَالَ: «لاَ حَوْلَ وَلاَ قُوَّةَ إِلَّا بِالله»","evidence":"رواه البخاري (4205) ومسلم (2704)."}]},{"ch_id":1,"ch_name":"باب من جوامع الدعاء","ch_evidence":"","duas":[{"id":0,"dua":"رَبَّنَا آتِنَا فِي الدُّنْيَا حَسَنَةً وَفِي الْآخِرَةِ حَسَنَةً، وَقِنَا عَذَابَ النَّارِ","evidence":"عن أنس «رَبَّنَا آتِنَا فِي الدُّنْيَا حَسَنَةً وَفِي الْآخِرَةِ حَسَنَةً، وَقِنَا عَذَابَ النَّارِ  رواه مسلم (2690)"},{"id":1,"dua":"","evidence":""}]},{"ch_id":1,"ch_name":"باب أذكار الاستيقاظ من النوم","ch_evidence":"","duas":[{"id":0,"dua":"ذِكْرُ الله ","evidence":""},{"id":1,"dua":"الوُضُوءُ","evidence":""},{"id":2,"dua":"والصَّلَاةُ","evidence":" عَنْ أَبِي هُرَيْرَةَ أَنَّ رَسُولَ الله ﷺ، قَالَ: «يَعْقِدُ الشَّيْطَانُ عَلَى قَافِيَةِ رَأْسِ أَحَدِكُمْ إِذَا هُوَ نَامَ ثَلاَثَ عُقَدٍ، يَضْرِبُ كُلَّ عُقْدَةٍ مَكَانَهَا: عَلَيْكَ لَيْلٌ طَوِيلٌ فَارْقُدْ، فَإِنِ اسْتَيْقَظَ فَذَكَرَ الله انْحَلَّتْ عُقْدَةٌ، فَإِنْ تَوَضَّأَ انْحَلَّتْ عُقْدَةٌ، فَإِنْ صَلَّى انْحَلَّتْ عُقَدُهُ كُلُّهَا، فَأَصْبَحَ نَشِيطًا طَيِّبَ النَّفْسِ، وَإِلَّا أَصْبَحَ خَبِيثَ النَّفْسِ كَسْلاَنَ». رواه البخاري (3269)ورواه مسلم (776) بمعناه، و«قافية الرأس»: آخره. في الصحيحين"},{"id":0,"dua":"الحَمْدُ لله الَّذِي أَحْيَانَا بَعْدَ مَا أَمَاتَنَا وَإِلَيْهِ النُّشُورُ","evidence":"عن حذيفة بن اليمان وعن أبي ذر ؛ قالوا: كَانَ النَّبِيُّ ﷺ إِذَا أَخَذَ مَضْجَعَهُ مِنَ اللَّيْلِ قَالَ: «اللهمَّ بِاسْمِكَ أَمُوتُ وَأَحْيَا». فَإِذَا اسْتَيْقَظَ قَالَ: «الحَمْدُ لله الَّذِي أَحْيَانَا بَعْدَ مَا أَمَاتَنَا وَإِلَيْهِ النُّشُورُ». (6312) (6325) رواهما البخاري. وعن البراء رواه مسلم(2711)."},{"id":0,"dua":"لاَ إِلَهَ إِلَّا الله وَحْدَهُ لاَ شَرِيكَ لَهُ، لَهُ المُلْكُ وَلَهُ الحَمْدُ، وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ، الحَمْدُ لله، وَسُبْحَانَ الله، وَلاَ إِلَهَ إِلَّا الله، والله أَكْبَرُ، وَلاَ حَوْلَ وَلاَ قُوَّةَ إِلَّا بالله","evidence":"عن عُبَادَة بْن الصَّامِتِ، عَنِ النَّبِيِّ ﷺ قَالَ: «مَنْ تَعَارَّ مِنَ اللَّيْلِ، فَقَالَ: لاَ إِلَهَ إِلَّا الله وَحْدَهُ لاَ شَرِيكَ لَهُ، لَهُ المُلْكُ وَلَهُ الحَمْدُ، وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ، الحَمْدُ لله، وَسُبْحَانَ الله، وَلاَ إِلَهَ إِلَّا الله، والله أَكْبَرُ، وَلاَ حَوْلَ وَلاَ قُوَّةَ إِلَّا بالله، ثُمَّ قَالَ: اللهمَّ اغْفِرْ لِي، أَوْ دَعَا، اسْتُجِيبَ لَهُ، فَإِنْ تَوَضَّأَ وَصَلَّى قُبِلَتْ صَلاَتُهُ». رواه البخاري (1154)."},{"id":0,"dua":"أواخر سورة آل عمران","evidence":"رواه مسلم (763)؛ عَنْ عَبْدِ الله بْنِ عَبَّاسٍ، أَنَّهُ رَقَدَ عِنْدَ رَسُولِ الله ﷺ، فَاسْتَيْقَظَ فَتَسَوَّكَ وَتَوَضَّأَ وَهُوَ يَقُولُ: إِنَّ فِى خَلْقِ ٱلسَّمَـٰوَٰتِ وَٱلْأَرْضِ وَٱخْتِلَـٰفِ ٱلَّيْلِ وَٱلنَّهَارِ لَـَٔايَـٰتٍۢ لِّأُو۟لِى ٱلْأَلْبَـٰبِ [آل عمران ١٩٠]، فَقَرَأَ هَؤُلَاءِ الْآيَاتِ حَتَّى خَتَمَ السُّورَةَ، ثُمَّ قَامَ فَصَلَّى رَكْعَتَيْنِ، فَأَطَالَ فِيهِمَا الْقِيَامَ وَالرُّكُوعَ وَالسُّجُودَ، ثُمَّ انْصَرَفَ فَنَامَ حَتَّى نَفَخَ، ثُمَّ فَعَلَ ذَلِكَ ثَلَاثَ مَرَّاتٍ سِتَّ رَكَعَاتٍ، كُلَّ ذَلِكَ يَسْتَاكُ وَيَتَوَضَّأُ وَيَقْرَأُ هَؤُلَاءِ الْآيَاتِ، ثُمَّ أَوْتَرَ بِثَلَاثٍ"}]},{"ch_id":1,"ch_name":"باب دعاء لبس الثوب","ch_evidence":"","duas":[{"id":0,"dua":"الْحَمْدُ لله الَّذِي كَسَانِي هَذَا الثَّوْبَ وَرَزَقَنِيهِ مِنْ غَيْرِ حَوْلٍ مِنِّي وَلَا قُوَّةٍ","evidence":"رواه أبو داود (4023). عَنْ سَهْلِ بْنِ مُعَاذِ بْنِ أَنَسٍ، عَنْ أَبِيهِ، أَنَّ رَسُولَ الله ﷺ قَالَ:... وَمَنْ لَبِسَ ثَوْبًا فَقَالَ: «الْحَمْدُ لله الَّذِي كَسَانِي هَذَا الثَّوْبَ وَرَزَقَنِيهِ مِنْ غَيْرِ حَوْلٍ مِنِّي وَلَا قُوَّةٍ، غُفِرَ لَهُ مَا تَقَدَّمَ مِنْ ذَنْبِهِ وَمَا تَأَخَّرَ». وسنده حسن  "}]},{"ch_id":1,"ch_name":"باب ما يقال قبل دخول الخلاء","ch_evidence":"","duas":[{"id":0,"dua":"اللهمَّ إِنِّي أَعُوذُ بِكَ مِنَ الْخُبْثِ وَالْخَبَائِثِ","evidence":"رواه مسلم (375)؛ عَنْ أَنَسٍ: كَانَ رَسُولُ الله ﷺ إِذَا دَخَلَ الْخَلَاءَ قَالَ: «اللهمَّ إِنِّي أَعُوذُ بِكَ مِنَ الْخُبْثِ وَالْخَبَائِثِ»"}]}]</string>
    <string name="share_using">يشارك</string>
    <string name="remove_bookmark">حذف مرجعية</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="bookmark_added">يتم إضافة إشارة مرجعية</string>
    <string name="copied_to_clipboard">تم النسخ</string>

    <string name="introduction">مقدمة</string>
    <string name="dialog_introduction_title">مقدمة الناصح الأمين &lt;b> يحيى بن علي الحجوري &lt;/b> حفظه الله</string>
    <string name="dialog_introduction_body"> بسم الله الرحمن الرحيم &lt;br> الحمد لله كثيرًا، وبعد: فقد طالعت رسالة &lt;b> «&lt;font color=\'#D2042D\'>الصحيح المنتقى من أذكار المصطفى&lt;/font>» &lt;/b> لأخينا الفاضل الشيخ عدنان بن حسين المصقري، فرأيتها رسالة مفيدة في بابها، جمع فيها أخونا عدنان جمعًا حسنًا مباركًا قلَّ أن تجده في مختصر مثل هذا مع تحري الصحة - حسب شرطه اعتمادًا على أحكام أهل الحديث على ما ذكره منها مما ليس في الصحيحين أو أحدهما - فجزاه الله خيرًا.  &lt;br>   &lt;b>كتبه يحيى بن علي الحجوري/ 7/ رجب/  1429هــ&lt;/b></string>
    <string name="ok">موافق</string>
    <string name="cancel">إلغاء</string>

    <string name="author">المؤلف</string>
    <string name="author_name">أبي اليمان عدنان بن حسين المصقري حفظه الله</string>
    <string name="dialog_author_desc"> <a href="https://t.me/AbulYamman">https://t.me/AbulYamman</a> <br /> https://t.me/Abulyammaneng</string>
    <string name="website_txt">موقع إلكتروني</string>
    <string name="website_shaykh"></string>
    <string name="action_change_font_size">تغيير حجم الخط</string>
    <string name="source">المصدر</string>
    <string name="dark_mode">وضع الليلي</string>
    <string name="light_mode">وضع الإضاءة</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="no_bookmarks">لا توجد مختارات</string>
    <string name="your_feedback">ملاحظاتك</string>
    <string name="your_name">إسمك</string>
    <string name="source_text">باب الأذكار الصحيحة عن رسول الله ﷺ من أذكار الصباح والمساء &lt;br> من الكتاب &lt;br> &lt;a href="https://drive.google.com/file/d/1fv1wDq2kvZI46fK-sh1PMWn8vGTjt_7o/view?usp=sharing"> الصحيح المنتقى من أذكار المصطفى &lt;/a> &lt;br> جمع &lt;br>  &lt;b>أبي اليمان عدنان بن حسين المصقري &lt;/b> حفظه الله  </string>
    <string name="telegram">Telegram</string>
    <string name="telegram_channel">&lt;a href="https://telegram.me/AbulYamman/">القناة العامة لجهود الشيخ أبي اليمان والفتاوى والدروس بالعربية &lt;/a>  &lt;br>  &lt;a href="http://t.me/Abulyammaneng/">قناة على التيليجرام باللغة الإنجليزية &lt;/a>  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from_the_book">من الكتاب</string>
    <string name="book_name">الصحيح المنتقى من أذكار المصطفى</string>
    <string name="collected_author_name">جمع \n أبي اليمان عدنان بن حسين المصقري حفظه الله</string>
    <string name="main_rv_header_note">* تقال قبل الشروق وقبل الغروب إلا الآيتان من آخر سورة البقرة فتقرأ بعد دخول الليل. \n* ولا يكرر منها إلا ما خصه الدليل:</string>

</resources>